@@ -41,7 +41,7 @@ tcpstream::tcpstream(const tcpstream &copy) :
 {
 	bufsize = 0;
 	gbuf = pbuf = NULL;
-	so = Socket::create(Socket::family(copy.so), SOCK_STREAM, IPPROTO_TCP);
+	so = Socket::create(Socket::getfamily(copy.so), SOCK_STREAM, IPPROTO_TCP);
 
 #ifdef OLD_STDCPP
 	init((streambuf *)this);
@@ -77,7 +77,7 @@ tcpstream::tcpstream(Socket::address& list, unsigned segsize, timeout_t tv) :
 {
 	bufsize = 0;
 	gbuf = pbuf = NULL;
-	so = Socket::create(list.family(), SOCK_STREAM, IPPROTO_TCP);
+	so = Socket::create(list.getfamily(), SOCK_STREAM, IPPROTO_TCP);
 
 #ifdef OLD_STDCPP
 	init((streambuf *)this);
